src/main/resources/static/CSSFile.css
/* ... */
#tournament-info-card-space{
    display: flex;
}

#tournament-info-card {
    background-color: #00C4B4;
    width: 50%;
    display: table;
    border-radius: 40px;
    margin-left: auto;
    margin-right: auto;
    padding: 3%;
    box-shadow: 5px 5px 5px black;
    container-type: size;
}

#tournament-participants-card{
    background-color: #00C4B4;
    width: 30%;
    border-radius: 40px;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 5px 5px 5px black;
    text-align: center;
}

#tournament-info-form {
    display: flex;
    flex-direction: column;
}

.tournament-info-form-input{
    width: 70%;
    font-size: max(1cqmin, 20px);
    min-font-size: 100px;
    padding: 1%;
    border-radius: 3cqmax;
    margin-left: auto;
    margin-right: auto;
}

.tournament-info-form-input::placeholder{
    color: black;
}

.tournament-info-form-input-label{
    font-size: max(1cqmin, 20px);
    color: white;
    text-shadow: 2px 2px 2px black;
    margin-top: 2%;
    margin-left: 15%;
}

#submit-tournament-info-button.both, #cancel-tournament-info-button.both {
    height: 60px;
    width: 50%;
    margin-top: 5%;
    border-radius: 30px;
    font-size: large;
}

#submit-tournament-info-button {
    margin-left: 40%;
}

#cancel-tournament-info-button {
    margin-left: 10%;
}

#tournament-info-form-buttons {
    display: grid;
    grid-template-columns: 50% 50%;
}

#tournament-info-participants-title{
    font-size: xx-large;
    color: white;
    text-shadow: 3px 3px 3px black;
    margin-top: 2%;
}

#tournament-info-athlete-info-button, #tournament-info-athlete-kick-button{
    padding: 5px 10px;
    margin: 5px 10px;
    border-radius: 25px;
    border-width: 2px;
}

#tournament-info-start-show-buttons{
    width: 100%;
    margin-top: 5%;
    text-align: center;
}

#start-tournament-info-button, #tournament-show-bracket-button{
    padding: 1.5%;
    border-radius: 30px;
    font-size: x-large;
}

/* ---------- Bracket Page ---------- */

#bracket-page{
    background-image: url("backgrounds/SportsBG4.svg");
    background-repeat: no-repeat;
    background-position: center;
}

#bracket-container{
    width: 95%;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    background-color: #00C4B4;
    border-radius: 40px;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 5px 5px 5px black;
    text-align: center;
}

#bracket-round-label{
    font-size: x-large;
    color: white;
    text-shadow: 3px 3px 3px black;
}

.bracket-matches{
    background-color: #7F39FB;
    border-radius: 40px;
    margin-top: 1%;
    padding: 1%;
    width: 95%;
    box-shadow: 2px 2px 2px black;
    font-size: x-large;
    display: block;
}

.bracket-match-link{
    text-decoration: none;
    color: white;
    text-shadow: 3px 3px 3px black;
    align-items: center;
    margin-bottom: 10px;
    display: grid;
}

.match-participant {
    text-align: center;
    display: inline-flex;
}

.participant-score {
    font-weight: bold;
    margin-left: 10px;
}

.bracket-match-loser{
    color: red;
    text-decoration: line-through;
    text-decoration-color: black;
}

/* ---------- Match Page ---------- */

#scoreboard{
    background-image: url("backgrounds/SportsBG2.svg");
    background-repeat: no-repeat;
    background-position: center;
}

#scoreboard-box{
    padding: 1%;
    align-items: center;
    background-color: #00C4B4;
    border-radius: 40px;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 5px 5px 5px black;
    text-align: center;
    width: 70%;
}

#scoreboard-box-title{
    font-size: xxx-large;
    color: black;
    text-align: center;
    font-weight: bold;
    margin-top: 0%;
}

.scoreboard-athlete{
    background-color: #7F39FB;
    padding: 3%;
    font-size: xxx-large;
    color: white;
    text-align: center;
    text-shadow: 2px 2px 2px black;
    font-weight: bold;
    display: table;
    margin: 1.5% auto;
    border-radius: 40px;
    box-shadow: 5px 5px 5px black;
    width: 50%;
}

.scoreboard-athlete-name, .scoreboard-athlete-score{
    margin: 1%;
    display: flex;
    justify-content: space-between;
}

.scoreboard-input-label{
    text-align: left;
}

.scoreboard-athlete-name-input{
    text-align: right;
    font-size: xx-large;
    width: auto;
    border-radius: 40px;
    padding: 1%;
}

.scoreboard-athlete-score-input{
    font-size: xx-large;
    width: 10%;
    border-radius: 40px;
    padding: 1%;
    text-align: center;
}

#scoreboard-winner-div{
    background-color: #7F39FB;
    padding: 1%;
    font-size: xx-large;
    color: white;
    text-align: center;
    text-shadow: 2px 2px 2px black;
    font-weight: bold;
    display: table;
    margin: 1.5% auto;
    border-radius: 40px;
    box-shadow: 5px 5px 5px black;
}

#scoreboard-winner-label, #scoreboard-winner-text{
    margin-top: 1%;
    margin-bottom: 1%;
}

#scoreboard-back-button{
    font-size: x-large;
    padding: 0.5%;
    border-radius: 40px;
    border-width: 2px;
    border-style: outset;
    border-color: buttonborder;
    border-image: initial;
}

#scoreboard-update-buttons{
    width: 60%;
    margin: 2% auto;
    display: flex;
    justify-content: space-between;
    font-size: xx-large;
}

#scoreboard-update-match-Button, #scoreboard-complete-match-button{
    font-size: x-large;
    padding: 1%;
    border-radius: 40px;
    border-width: 2px;
    border-style: outset;
    border-color: buttonborder;
    border-image: initial;
}

#scoreboard-update-buttons select{
    font-size: x-large;
}

